maze.lessons.maze.wallfollower.WallFollowerMaze.scala.error
Escaper:10: error: value gauche is not a member of Unit
  			while ( !estFaceMur() ) {avance() gauche()}
                                                          ^