maze.lessons.maze.wallfollower.WallFollowerMaze.scala.code
override def run() {

def  keepHandOnSideWall() {
   	
   
  			avance()
  			gauche()
  			
  			while ( !estFaceMur() ) {avance() gauche()}
  			droite()
  			
  			
  			 
}

while (!estSurBiscuit())
 keepHandOnSideWall()
 prendBiscuit()
}

